gcc/testsuite/rust/rustc/ui/impl-trait/issue-99073-2_dg.rs
use std::fmt::Display;

fn main() {
    test("hi", true);
}

fn test<T: Display>(t: T, recurse: bool) -> impl Display {
    let f = || {
        let i: u32 = test::<i32>(-1, false);
// { dg-error ".E0792." "" { target *-*-* } .-1 }
// { dg-error ".E0792." "" { target *-*-* } .-2 }
        println!("{i}");
    };
    if recurse {
        f();
    }
    t
}

